[package]
authors = ["Icelle Ku <icelleku@gmail.com>"]
description = "A rust library for calling the Quandl API."
documentation = "http://open.frostly.com/quandl"
keywords = ["quandl"]
license = "MIT/Apache-2.0"
name = "quandl"
readme = "README.md"
repository = "https://github.com/frostly/quandl"
version = "0.1.1"
build = "build_readme_test.rs"

[dependencies]
chrono = "0.2.17"
curl = "0.2.14"
hyper = "0.7.0"
quick-error = "0.1.4"
serde_json = "0.6.0"
url = "0.5.0"

[dependencies.clippy]
optional = true
version = "^0.0"

[features]
default = []
# used to run test cases that call out to the quandl API directly
test-quandl-api = []

[build-dependencies]
skeptic = { version = "0.4.0", optional = true }

[dev-dependencies]
skeptic = "0.4.0"
