[package]
authors = ["Icelle Ku <icelleku@gmail.com>"]
build = "build_readme_test.rs"
description = "A rust library for calling the Quandl API."
documentation = "http://open.frostly.com/quandl"
keywords = ["quandl"]
license = "MIT/Apache-2.0"
name = "quandl"
readme = "README.md"
repository = "https://github.com/frostly/quandl"
version = "0.1.1"

[build-dependencies]

[build-dependencies.skeptic]
optional = true
version = "0.4.0"

[dependencies]
chrono = "0.2.17"
curl = "0.2.14"
hyper = "0.7.0"
quick-csv = "0.1.3"
quick-error = "0.1.4"
serde_json = "0.6.0"
url = "0.5.0"
zip = "0.1.15"

[dependencies.clippy]
optional = true
version = "^0.0"

[dev-dependencies]
log = "0.3"
skeptic = "0.4.0"
yup-hyper-mock = "1.3.2"

[features]
default = []
test-quandl-api = []
