[package]
authors = ["Icelle Ku <icelleku@gmail.com>"]
description = "A rust library for calling the Quandl API."
documentation = "http://open.frostly.com/quandl"
keywords = ["quandl"]
license = "MIT/Apache-2.0"
name = "quandl"
edition = "2018"
readme = "README.md"
repository = "https://github.com/frostly/quandl"
version = "0.2.0"

[dependencies]
bytes = "0.5"
chrono = "0.4.10"
hyper = "0.13.2"
hyper-tls = "0.4.1"
quick-error = "1.2.3"
serde_json = "1.0.48"
tokio = { version = "0.2.11", features = ["full"] }

[features]
default = []
# used to run test cases that call out to the quandl API directly
test-quandl-api = []

[build-dependencies]
skeptic = { version = "0.13.4", optional = true }

[dev-dependencies]
skeptic = "0.13.4"
